<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.adi.MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Adway Sanjay Kirwe"
        android:layout_margin="10dp"
        android:textSize="20sp"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/Gender"
        android:textStyle="bold"  />
    <RadioGroup
        android:id="@+id/gen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:layout_marginLeft="15dp"  />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:layout_marginLeft="15dp" />

    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/KnownLanguages"
        android:textStyle="bold"  />


    <CheckBox
        android:id="@+id/check1"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check1"
        android:layout_marginLeft="15dp" />

    <CheckBox
        android:id="@+id/check2"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check2"
        android:layout_marginLeft="15dp" />


    <CheckBox
        android:id="@+id/check3"
        android:onClick="onCheckboxClicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check3"
        android:layout_marginLeft="15dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/Country"
        android:textStyle="bold"  />

    <Spinner

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nationality_spinner"
        android:entries="@array/nation"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn01"
        android:text="@string/btn_name"
        android:onClick="displayData"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/str"
        android:text="please set my value"
        />


</LinearLayout>
